validation des URL des tests et des Endpoints.