@@ -1,5 +1,7 @@
 package com.safetynet.alerts.service;
 
+import com.safetynet.alerts.dto.FireDTO;
+import com.safetynet.alerts.dto.FirestationCoverageDTO;
 import com.safetynet.alerts.dto.PersonBasicDTO;
 import com.safetynet.alerts.dto.PersonDTO;
 import com.safetynet.alerts.model.Firestation;
@@ -38,27 +40,65 @@ public class FirestationService {
         logger.warn("firestation not found for update : {}", address);
         return false;
     }
+    /**
+     * ✅ Ajoute une nouvelle caserne.
+     */
+    public boolean addFirestation(Firestation firestation) {
+        List<Firestation> stations = jsonDataLoader.getAllFirestations();
+        // Vérifie si l'adresse existe déjà
+        if (stations.stream().anyMatch(fs -> fs.getAddress().equalsIgnoreCase(firestation.getAddress()))) {
+            return false;
+        }
+        stations.add(firestation);
+        return true;
+    }
+    /**
+     * 🛑 Supprime une caserne par son adresse.
+     */
+    public boolean deleteFirestation(String address) {
+        List<Firestation> stations = jsonDataLoader.getAllFirestations();
+        return stations.removeIf(fs -> fs.getAddress().equalsIgnoreCase(address));
+    }
 
     // ✅ Récupérer les personnes couvertes par une caserne
     public Map<String, Object> getPersonsByStation(int stationNumber) {
-        List<Person> personsCovered = jsonDataLoader.getAllPersons().stream()
-                .filter(person -> jsonDataLoader.getAllFirestations().stream()
-                        .anyMatch(firestation -> firestation.getStation() == stationNumber
-                                && firestation.getAddress().equalsIgnoreCase(person.getAddress())))
-                .collect(Collectors.toList());
+        List<Person> persons = jsonDataLoader.getAllPersons().stream()
+                .filter(p -> jsonDataLoader.getAllFirestations().stream()
+                        .anyMatch(fs -> fs.getStation() == stationNumber && fs.getAddress().equalsIgnoreCase(p.getAddress())))
+                .toList();
 
-        long adults = personsCovered.stream().filter(p -> p.getAge() > 18).count();
-        long children = personsCovered.size() - adults;
+        List<MedicalRecord> medicalRecords = jsonDataLoader.getAllMedicalRecords();
 
-        Map<String, Object> response = new HashMap<>();
-        response.put("persons", personsCovered.stream()
-                .map(person -> new PersonBasicDTO(person.getFirstName(), person.getLastName(), person.getAddress(), person.getPhone()))
-                .collect(Collectors.toList()));
-        response.put("adults", adults);
-        response.put("children", children);
+        List<Map<String, String>> personDetails = persons.stream()
+                .map(person -> Map.of(
+                        "firstName", person.getFirstName(),
+                        "lastName", person.getLastName(),
+                        "address", person.getAddress(),
+                        "phone", person.getPhone()
+                )).toList();
 
-        return response;
+        long adults = persons.stream()
+                .map(person -> medicalRecords.stream()
+                        .filter(med -> med.getFirstName().equals(person.getFirstName()) &&
+                                med.getLastName().equals(person.getLastName()))
+                        .findFirst()
+                        .map(MedicalRecord::getAge)  // 🔥 Récupère l'âge
+                        .orElse(0)) // Si non trouvé, âge = 0 (sécurisation)
+                .filter(age -> age > 18)
+                .count();
+
+        long children = persons.size() - adults;
+
+        Map<String, Object> result = new HashMap<>();
+        result.put("persons", personDetails);
+        result.put("adultCount", adults);
+        result.put("childCount", children);
+
+        return result;
     }
+
+
+
 
     // ✅ Récupérer les numéros de téléphone des résidents couverts par une caserne
     public List<String> getPhoneNumbersByStation(int stationNumber) {
@@ -75,7 +115,7 @@ public class FirestationService {
     public Map<String, Object> getFireDetails(String address) {
         List<Person> residents = jsonDataLoader.getAllPersons().stream()
                 .filter(person -> person.getAddress().equalsIgnoreCase(address))
-                .collect(Collectors.toList());
+                .toList();
 
         Optional<Firestation> firestation = jsonDataLoader.getAllFirestations().stream()
                 .filter(f -> f.getAddress().equalsIgnoreCase(address))
@@ -104,51 +144,118 @@ public class FirestationService {
                 .filter(firestation -> firestation.getAddress().equalsIgnoreCase(address))
                 .findFirst().orElse(null);
     }
-    public Map<String, List<PersonDTO>> getFloodStations(List<Integer> stationNumbers) {
-        // Récupération des adresses desservies par les stations fournies
-        Set<String> addresses = jsonDataLoader.getAllFirestations().stream()
-                .filter(firestation -> stationNumbers.contains(firestation.getStation()))
-                .map(Firestation::getAddress)
-                .collect(Collectors.toSet());
-
-        // Récupération des habitants pour chaque adresse
+    public Map<String, List<PersonDTO>> getFloodStations(List<Integer> stations) {
         Map<String, List<PersonDTO>> result = new HashMap<>();
-        for (String address : addresses) {
-            List<Person> residents = jsonDataLoader.getAllPersons().stream()
-                    .filter(person -> person.getAddress().equalsIgnoreCase(address))
-                    .collect(Collectors.toList());
 
-            List<PersonDTO> personDTOs = residents.stream()
-                    .map(person -> {
-                        MedicalRecord medicalRecord = jsonDataLoader.getAllMedicalRecords().stream()
-                                .filter(record -> record.getFirstName().equalsIgnoreCase(person.getFirstName())
-                                        && record.getLastName().equalsIgnoreCase(person.getLastName()))
-                                .findFirst()
-                                .orElse(null);
+        for (Integer station : stations) {
+            List<String> addresses = jsonDataLoader.getAllFirestations().stream()
+                    .filter(fs -> fs.getStation() == station) // Correction ici
+                    .map(Firestation::getAddress)
+                    .toList();
 
-                        return new PersonDTO(person, medicalRecord);
-                    })
-                    .collect(Collectors.toList());
-
-            result.put(address, personDTOs);
+            for (String address : addresses) {
+                List<PersonDTO> residents = jsonDataLoader.getAllPersons().stream()
+                        .filter(p -> p.getAddress().equalsIgnoreCase(address))
+                        .map(person -> {
+                            MedicalRecord record = jsonDataLoader.getAllMedicalRecords().stream()
+                                    .filter(med -> med.getFirstName().equals(person.getFirstName()) && med.getLastName().equals(person.getLastName()))
+                                    .findFirst()
+                                    .orElse(null);
+                            return new PersonDTO(person, record);
+                        })
+                        .toList();
+                result.put(address, residents);
+            }
         }
         return result;
     }
+    /**
+     * 🔍 Trouve une caserne par son adresse.
+     */
+    public Firestation findByAddress(String address) {
+        return jsonDataLoader.getAllFirestations().stream()
+                .filter(fs -> fs.getAddress().equalsIgnoreCase(address))
+                .findFirst()
+                .orElse(null);
+    }
+
 
     // Recherche les informations des habitants et leurs antécédents médicaux
-    public List<PersonDTO> getFireInfoByAddress(String address) {
+    public FireDTO getFireInfoByAddress(String address) {
+        // Filtrer les personnes par adresse
+        List<Person> persons = jsonDataLoader.getAllPersons().stream()
+                .filter(p -> p.getAddress().equalsIgnoreCase(address))
+                .toList();
+
+        if (persons.isEmpty()) {
+            throw new IllegalArgumentException("Aucun habitant trouvé à cette adresse.");
+        }
+
+        // Mapper chaque personne en PersonDTO
+        List<PersonDTO> residents = persons.stream()
+                .map(person -> {
+                    MedicalRecord record = jsonDataLoader.getAllMedicalRecords().stream()
+                            .filter(med -> med.getFirstName().equals(person.getFirstName()) && med.getLastName().equals(person.getLastName()))
+                            .findFirst()
+                            .orElse(null);
+                    return new PersonDTO(person, record);
+                })
+                .toList();
+
+        // Récupérer le numéro de la station
+        int stationNumber = jsonDataLoader.getAllFirestations().stream()
+                .filter(fs -> fs.getAddress().equalsIgnoreCase(address))
+                .map(Firestation::getStation)
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Aucune caserne trouvée pour cette adresse."));
+
+        // Retourner un FireDTO
+        return new FireDTO(residents, stationNumber);
+    }
+
+
+
+
+    public Map<String, Object> getChildrenByAddress(String address) {
         List<Person> residents = jsonDataLoader.getAllPersons().stream()
                 .filter(person -> person.getAddress().equalsIgnoreCase(address))
-                .collect(Collectors.toList());
-        return residents.stream().map(person -> {
-                    MedicalRecord medicalRecord = jsonDataLoader.getAllMedicalRecords().stream()
-                            .filter(record -> record.getFirstName().equalsIgnoreCase(person.getFirstName())
-                                    && record.getLastName().equalsIgnoreCase(person.getLastName()))
-                            .findFirst().orElse(null);
-                    return new PersonDTO(person, medicalRecord);
-                })
-                .collect(Collectors.toList());
+                .toList();
+
+        if (residents.isEmpty()) {
+            return Map.of("message", "Aucun résident trouvé à cette adresse.");
+        }
+
+        List<Map<String, Object>> children = new ArrayList<>();
+        List<Map<String, String>> householdMembers = new ArrayList<>();
+
+        for (Person person : residents) {
+            MedicalRecord record = jsonDataLoader.getAllMedicalRecords().stream()
+                    .filter(med -> med.getFirstName().equals(person.getFirstName()) && med.getLastName().equals(person.getLastName()))
+                    .findFirst()
+                    .orElse(null);
+
+            int age = record != null ? record.getAge() : 0;
+
+            if (age <= 18) {
+                children.add(Map.of(
+                        "firstName", person.getFirstName(),
+                        "lastName", person.getLastName(),
+                        "age", age
+                ));
+            } else {
+                householdMembers.add(Map.of(
+                        "firstName", person.getFirstName(),
+                        "lastName", person.getLastName()
+                ));
+            }
+        }
+
+        return Map.of(
+                "children", children,
+                "householdMembers", householdMembers
+        );
     }
+
 
 
 
